primitives/api/test/tests/ui/missing_path_for_trait.stderr
error: The implemented trait has to be referenced with a path, e.g. `impl client::Core for Runtime`.
  --> tests/ui/missing_path_for_trait.rs:12:7
   |
12 |     impl Api<Block> for Runtime {
   |          ^^^
